--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,22 @@
 *.class
 *.log
+.cache/
+.history/
+.lib/
+dist/*
+target/
+lib_managed/
+src_managed/
+project/boot/
+project/plugins/project/
+
+# Scala-IDE specific
+.scala_dependencies
+.worksheet
+.idea
+*.xml
+21DaysOfCode.iml
+*/.idea
+*/out
+*/advancescala.iml
+
