dispatchers code added

--- a/akka-essential/src/main/resources/application.conf
+++ b/akka-essential/src/main/resources/application.conf
@@ -7,3 +7,21 @@ myConfig {
     loglevel = INFO
   }
 }
+
+
+my-dispatcher {
+  type = Dispatcher # PinnedDispatcher, CallingThreadDispatcher
+  executor = "thread-pool-executor"
+  thread-pool-executor {
+    fixed-pool-size = 1
+  }
+  throughput = 30
+}
+
+dispatchersDemo {
+  akka.actor.deployment {
+    /rtjvm {
+      dispatcher = my-dispatcher
+    }
+  }
+}
