--- a/akka-essential/src/main/resources/application.conf
+++ b/akka-essential/src/main/resources/application.conf
@@ -8,6 +8,17 @@ myConfig {
   }
 }
 
+specialTimedAssertionsConfig{
+akka.test.single-expect-default = 0.3s
+}
+interceptingLogMessages {
+  akka {
+    loggers = ["akka.testkit.TestEventListener"]
+    test {
+      filter-leeway = 5s
+    }
+  }
+}
 
 my-dispatcher {
   type = Dispatcher # PinnedDispatcher, CallingThreadDispatcher
