--- a/akka-essential/src/main/resources/application.conf
+++ b/akka-essential/src/main/resources/application.conf
@@ -2,15 +2,18 @@
 //  loglevel = DEBUG
 //}
 
-myConfig {
+mySpecialConfig {
   akka {
     loglevel = INFO
   }
 }
 
-specialTimedAssertionsConfig{
-akka.test.single-expect-default = 0.3s
+# timed assertions test config
+specialTimedAssertionsConfig {
+  akka.test.single-expect-default = 0.3s
 }
+
+# intercepting log messages test
 interceptingLogMessages {
   akka {
     loggers = ["akka.testkit.TestEventListener"]
@@ -19,6 +22,25 @@ interceptingLogMessages {
     }
   }
 }
+
+# routers demo
+routersDemo {
+  akka {
+    actor.deployment {
+      /poolMaster2 {
+        router = round-robin-pool
+        nr-of-instances = 7
+      }
+
+      /groupMaster2 {
+        router = round-robin-group
+        routees.paths = ["/user/slave_1","/user/slave_2","/user/slave_3","/user/slave_4","/user/slave_5"]
+      }
+    }
+  }
+}
+
+# dispatchers demo
 
 my-dispatcher {
   type = Dispatcher # PinnedDispatcher, CallingThreadDispatcher
@@ -33,6 +55,24 @@ dispatchersDemo {
   akka.actor.deployment {
     /rtjvm {
       dispatcher = my-dispatcher
+    }
+  }
+}
+
+# mailboxes demo
+
+mailboxesDemo {
+  support-ticket-dispatcher {
+    mailbox-type = "part5infra.Mailboxes$SupportTicketPriorityMailbox"
+  }
+
+  control-mailbox {
+    mailbox-type = "akka.dispatch.UnboundedControlAwareMailbox"
+  }
+
+  akka.actor.deployment {
+    /altControlAwareActor {
+      mailbox = control-mailbox
     }
   }
 }
