mailox configs added

--- a/akka-essential/src/main/resources/application.conf
+++ b/akka-essential/src/main/resources/application.conf
@@ -60,14 +60,18 @@ dispatchersDemo {
 }
 
 # mailboxes demo
-
-mailboxesDemo {
+mailbox{
   support-ticket-dispatcher {
     mailbox-type = "part5infra.Mailboxes$SupportTicketPriorityMailbox"
   }
 
   control-mailbox {
     mailbox-type = "akka.dispatch.UnboundedControlAwareMailbox"
+  }
+
+
+  support-ticket-dispatcher {
+    mailbox-type = "part5infra.Mailboxes$SupportTicketPriorityMailbox"
   }
 
   akka.actor.deployment {
